# azure-metrics

./: .gitignore  README.md  app.py  pyproject.toml
analises_sprint/Sprint 1/: dados_brutos.json  dados_processados.json  detalhes_completos.csv  insights.json  itens.csv  relatorio_executivo.html  transicoes.csv
analises_sprint/Sprint 2/: dados_brutos.json  dados_processados.json  detalhes_completos.csv  insights.json  itens.csv  transicoes.csv
analises_sprint/Sprint 3/: dados_brutos.json  dados_processados.json  detalhes_completos.csv  insights.json  itens.csv  transicoes.csv
analises_sprint/Sprint 4/: insights.json
analises_sprint/Sprint 5/: insights.json
analises_sprint/Sprint 6/: insights.json
analises_sprint/consolidado/: detalhes_consolidados.csv  insights_consolidados.json
src/analysis/: report_generator.py  sprint_analyzer.py
src/data/: azure_client.py
src/templates/: relatorio.html  relatorio_consolidado.html
src/ui/: components.py  pages.py
